# platzky-google-tag-manager

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
platzky_google_tag_manager/: __init__.py
tests/: test_google_tag_manager_plugin.py
