[tool.poetry]
name = "platzky_google_tag_manager"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
ruff = "^0.8.3"
pyright = "^1.1.390"
coverage = "^7.6.9"
platzky = "^0.2.17"
